add_library(asio INTERFACE)
if(WIN32)
	target_include_directories(asio INTERFACE C:\\asio\\include)
else(UNIX)
	target_include_directories(asio INTERFACE /usr/include/asio)
	target_link_libraries(asio INTERFACE pthread)
endif()
add_executable(server chat_server.cpp)
add_executable(client chat_client.cpp)

target_link_libraries(client asio)
target_link_libraries(server asio)

target_precompile_headers(client PUBLIC pch.h)
target_precompile_headers(server REUSE_FROM client)
